Update progress tracker with final validation results