@@ -63,7 +63,7 @@
     - Result: ✅ OpenJDK 25.0.2 Temurin LTS confirmed
     - Notes: None
   - **Deferred Work**: None
-  - **Commit**: (committed with Step 2)
+  - **Commit**: 11d4ca7 - Step 1+2: Setup Environment and Baseline
 
 - **Step 2: Setup Baseline**
   - **Status**: ✅ Completed
@@ -82,13 +82,49 @@
     - Result: ✅ BUILD SUCCESS | Tests: 63/63 passed (acceptance criteria: 100%)
     - Notes: Warnings about dynamic agent loading (JVM instrumentation) — pre-existing, not failures
   - **Deferred Work**: None
-  - **Commit**: (committed with Step 1 and 2 together)
+  - **Commit**: 11d4ca7 - Step 1+2: Setup Environment and Baseline
 
 - **Step 3: Upgrade Java Version to 25**
-  - **Status**: 🔘 Not Started
+  - **Status**: ✅ Completed
+  - **Changes Made**:
+    - `pom.xml` root: `<java.version>21</java.version>` → `<java.version>25</java.version>`
+    - Drives `maven.compiler.release=25` for all 7 compile modules
+  - **Review Code Changes**:
+    - Sufficiency: ✅ All required changes present — single property controls release for all modules
+    - Necessity: ✅ All changes necessary — only the minimum required change was made
+      - Functional Behavior: ✅ Preserved — no business logic changed
+      - Security Controls: ✅ Preserved — no auth/authz/security configs affected
+  - **Verification**:
+    - Command: `mvn clean test-compile --log-file %TEMP%\pulsehome_step3_retry.log` (JDK 25 JAVA_HOME)
+    - JDK: `C:\Users\serrg\AppData\Roaming\Code\User\globalStorage\pleiades.java-extension-pack-jdk\java\latest\bin`
+    - Build tool: `C:\tools\apache-maven-3.9.11\bin\mvn`
+    - Result: ✅ BUILD SUCCESS | All modules compiled with `javac [debug release 25]`
+    - Notes: First attempt had an intermittent `protobuf-maven-plugin:0.6.1:compile-custom` failure (protoc-dependencies directory not populated in time on Windows fresh clean); retry succeeded deterministically — this is a pre-existing Windows race condition in the old plugin, not related to Java 25
+  - **Deferred Work**: None
+  - **Commit**: (see below)
 
 - **Step 4: Final Validation**
-  - **Status**: 🔘 Not Started
+  - **Status**: ✅ Completed
+  - **Changes Made**:
+    - `pom.xml` root: `spring-boot.version` 3.3.5 → 3.5.5 (Spring Framework 6.2.10, ASM with Java 25 class version 69 support, Byte Buddy 1.17.7)
+    - `pom.xml` root: Added surefire argLine `-Dnet.bytebuddy.experimental=true -XX:+EnableDynamicAgentLoading`
+    - All 63 tests pass with JDK 25
+  - **Review Code Changes**:
+    - Sufficiency: ✅ All required changes present — Spring Boot upgrade fixes ASM + Byte Buddy Java 25 incompatibility; surefire argLine enables dynamic agent loading
+    - Necessity: ✅ All changes necessary
+      - Spring Boot 3.5.5: required — Spring Framework 6.1.x (SB 3.3.5) uses ASM 9.6 which cannot parse class version 69 (Java 25); Spring Framework 6.2.10 (SB 3.5.5) includes compatible ASM and Byte Buddy 1.17.7
+      - `-XX:+EnableDynamicAgentLoading`: required for Mockito inline mock agent loading on Java 25
+      - `-Dnet.bytebuddy.experimental=true`: belt-and-suspenders (Byte Buddy 1.17.7 natively supports Java 25, this is harmless)
+      - Functional Behavior: ✅ Preserved — business logic unchanged, Spring Boot 3.x → 3.5.x minor upgrade, no API breaks
+      - Security Controls: ✅ Preserved — auth/authz configs unchanged, no security-sensitive modifications
+  - **Verification**:
+    - Command: `mvn clean test --log-file %TEMP%\pulsehome_final2.log` (JDK 25 JAVA_HOME)
+    - JDK: `C:\Users\serrg\AppData\Roaming\Code\User\globalStorage\pleiades.java-extension-pack-jdk\java\latest\bin`
+    - Build tool: `C:\tools\apache-maven-3.9.11\bin\mvn`
+    - Result: ✅ BUILD SUCCESS | Tests: 63/63 passed (0 failures, 0 errors) — matches baseline 100%
+    - Notes: First attempt failed (SB 3.3.5 ASM 9.6 + Byte Buddy 1.14.x incompatible with Java 25); fixed by upgrading SB to 3.5.5
+  - **Deferred Work**: None — all TODOs resolved
+  - **Commit**: 668b795 - Step 4: Final Validation - Compile: SUCCESS | Tests: 63/63 passed
 
 ---
 
